[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/SoundPlayer.gd" type="Script" id=1]
[ext_resource path="res://sounds/soft-rain-ambient.mp3" type="AudioStream" id=2]
[ext_resource path="res://sounds/anjelic-choir.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/over-the-city-piano-theme.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/violin-lose.mp3" type="AudioStream" id=5]

[node name="SoundPlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="Rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0

[node name="AnjelicChoirPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -13.0

[node name="PianoThemePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -17.0

[node name="GameOverPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -13.0
